--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.optum</groupId>
-    <artifactId>lynx-database</artifactId>
+    <artifactId>manic-monday-demo</artifactId>
     <version>0.1.0</version>
 
     <parent>
